--- a/sass/mixins/_hide-text.scss
+++ b/sass/mixins/_hide-text.scss
@@ -1,4 +1,6 @@
-%hide-text {
+
+
+@mixin hide-text(){
   position:absolute;
   left:-10000px;
   top:auto;
@@ -9,3 +11,6 @@
 
 
 
+%hide-text {
+  @include hide-text;
+}
