--- a/sass/components/_edan-search.scss
+++ b/sass/components/_edan-search.scss
@@ -5,22 +5,14 @@
     .form-item-edan-q label{
       @extend %hide-text;
     }
-    input[type="submit"] {
-      @include button_style($blue, $gray-lighter, darken($gray-lighter,5));
-    }
-    input[type="text"] {
-      @include input-placeholder {
-        color: $gray-light;
-      }
-    }
   } //end edan-search-form
-
 }
 
 .tb-megamenu {
   .edan-search-form {
     input[type="submit"] {
       @include button_style(white, $blue2);
+      margin: 0;
       background: {
         image: image-url("search.svg");
         repeat: no-repeat;
@@ -28,8 +20,14 @@
         size: 18%;
       }
     }
+    .form-text {
+      @include input-placeholder {
+        color: $gray;
+      }
+    }
+
   } //end edan-search-form
-}
+} // end tb-megamenu
 
 .pane-edan-search-search-form {
   margin: em($vert-spacing-unit) 0;
@@ -38,34 +36,45 @@
   }
   .edan-search-form {
     position: relative;
-  //  < div {
-  //  @include clearfix;
-  //}
+
     input[type="text"] {
       width: 100%;
       height: 50px;
       padding-right: $vert-spacing-unit*2;
-    }
-    .form-text::-webkit-input-placeholder {
-      color: $gray-darker;
-      text-transform: uppercase;
-    }
-
-    .form-text:-moz-placeholder { /* Firefox 18- */
-      color: $gray-darker;
-      text-transform: uppercase;
+      @include border-radius(0);
+      -webkit-appearance: none;
+      border: 1px solid darken($gray-lighter,5);
+      padding-left: em(10px);
     }
 
-    .form-text::-moz-placeholder {  /* Firefox 19+ */
-      color: $gray-darker;
-     text-transform: uppercase;
+    .form-text {
+      @include input-placeholder {
+        color: $gray-darker;
+        text-transform: uppercase;
+      }
     }
 
-    .form-text:-ms-input-placeholder {
-      color: $gray-darker;
-      text-transform: uppercase;
-    }
+    //.form-text::-webkit-input-placeholder {
+    //  color: $gray-darker;
+    //  text-transform: uppercase;
+    //}
+    //
+    //.form-text:-moz-placeholder { /* Firefox 18- */
+    //  color: $gray-darker;
+    //  text-transform: uppercase;
+    //}
+    //
+    //.form-text::-moz-placeholder {  /* Firefox 19+ */
+    //  color: $gray-darker;
+    // text-transform: uppercase;
+    //}
+    //
+    //.form-text:-ms-input-placeholder {
+    //  color: $gray-darker;
+    //  text-transform: uppercase;
+    //}
     input[type="submit"]  {
+      @include button_style($blue, white);
       height: $vert-spacing-unit*2;
       width: $vert-spacing-unit*2;
       text-indent: -99999px;
@@ -73,7 +82,7 @@
         image: image-url("search-blue.svg");
         repeat: no-repeat;
         position:  50%;
-        size: 80%;
+        size: 70%;
       }
     }
     //.form-item-edan-q {
@@ -83,11 +92,24 @@
     .form-actions {
       position: absolute;
       top:0;
-      right: 0;
+      right: 1px;
+      border-left: 1px solid darken($gray-lighter,5);
+    }
+  }
+
+  @include breakpoint($tab) {
+    .edan-search-form {
+      input[type="submit"] {
+        @include button_style($blue, $gray-lighter, darken($gray-lighter, 5));
+      }
+      .form-actions {
+        border-left: none;
+      }
     }
   }
   @include breakpoint($desk) {
     //@include clearfix;
+    margin: em($vert-spacing-unit) 0 em($section-spacing);
     .inner {
       @include display-flex;
     }
@@ -96,9 +118,9 @@
       font-size: em($font-size-h3);
       line-height:   $vert-spacing-unit*1.5/$font-size-h3;
       color: $gray-darker;
-      height:  em($vert-spacing-unit*1.5);
+      height:  em($vert-spacing-unit*1.5, $font-size-h3);
       margin: 0;
-      padding-top: em(4px);
+     // padding-top: em(4px);
     }
     .title-wrapper,
     .pane-content {
@@ -112,33 +134,41 @@
           position:  10% 53%;
           size: 18%;
         }
-        padding-left: em(30px);
-        height: em($vert-spacing-unit*1.5);
+        padding-left: 30px;
+        height: em($vert-spacing-unit*1.5, $font-size-small);
       }
       input[type="text"] {
         height: em($vert-spacing-unit*1.5);
         border: none;
-        padding-right: em(100px);
+        padding-right: 32%;
+        padding-left: em(4px);
+        text-align: right;
       }
-      .form-text::-webkit-input-placeholder {
-        color: $gray;
-        text-transform: capitalize;
+      .form-text {
+        @include input-placeholder {
+          color: $gray;
+          text-transform: capitalize;
+        }
       }
-
-      .form-text:-moz-placeholder { /* Firefox 18- */
-        color: $gray;
-        text-transform: capitalize;
-      }
-
-      .form-text::-moz-placeholder {  /* Firefox 19+ */
-        color: $gray;
-        text-transform: capitalize;
-      }
-
-      .form-text:-ms-input-placeholder {
-        color: $gray;
-        text-transform: capitalize;
-      }
+      //.form-text::-webkit-input-placeholder {
+      //  color: $gray;
+      //  text-transform: capitalize;
+      //}
+      //
+      //.form-text:-moz-placeholder { /* Firefox 18- */
+      //  color: $gray;
+      //  text-transform: capitalize;
+      //}
+      //
+      //.form-text::-moz-placeholder {  /* Firefox 19+ */
+      //  color: $gray;
+      //  text-transform: capitalize;
+      //}
+      //
+      //.form-text:-ms-input-placeholder {
+      //  color: $gray;
+      //  text-transform: capitalize;
+      //}
     }
 
 
