--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -8,8 +8,8 @@
     color: $gray-darker;
   }
   p {
-    font-size: em(20px);
-    line-height: 1.3;
+    font-size: em($font-size-h3);
+    line-height: $line-height-h3;
     &:last-child {margin-bottom: 0}
   }
   .panel-pane {margin: $vert-spacing-unit 0;}
@@ -25,7 +25,7 @@
 } // end l-footer-preface
 
 .l-footer .l-container {
-  p, li {
+  p, .views-field-field-location{
     font-size: em(13px, 16px);
     //line-height: ;
   }
@@ -64,7 +64,7 @@
      }
      .item-list li {
         width: 40%;
-        margin-left: em(20px, 13px);
+        margin-left: em(20px);
         &:first-child {
           margin-left: 0;
         }
@@ -79,10 +79,6 @@
       }
     }
 
-    //.si-terms-privacy {
-    //  font-size: em(10px);
-    //  line-height: 10;
-    //}
   } // end l-region--footer-left
 
   .pane-constant-contact-1 {
@@ -97,34 +93,23 @@
     }
     .form-text {
       width: 63%;
+      height: em(35px);
+      @include border-radius(0);
+      -webkit-appearance: none;
+      border: 1px solid darken($gray-lighter,5);
+      @include input-placeholder {
+        color: $gray;
+        text-transform: capitalize;
+        color: $blue;
+        text-transform: uppercase;
+        font-size: em(13px);
+        font-weight: 600;
+      }
     }
-    .form-text::-webkit-input-placeholder {
-      color: $blue;
-      text-transform: uppercase;
-      font-size: em(13px);
-      font-weight: 600;
-    }
-
-    .form-text:-moz-placeholder { /* Firefox 18- */
-      color: $blue;
-      text-transform: uppercase;
-      font-size: em(13px);
-      font-weight: 600;
-    }
-
-    .form-text::-moz-placeholder {  /* Firefox 19+ */
-      color: $blue;
-      text-transform: uppercase;
-      font-size: em(13px);
-      font-weight: 600;
+    input[type="submit"] {
+      height: em(35px, $font-size-small);
     }
 
-    .form-text:-ms-input-placeholder {
-      color: $blue;
-      text-transform: uppercase;
-      font-size: em(13px);
-      font-weight: 600;
-    }
     .form-submit {
       margin: 0;
       margin-left: em($horz-spacing-unit);
@@ -148,7 +133,7 @@
         li {
           display: inline-block; /* non-flexbox browsers */
           @include flex(1 0 43%);
-          margin-right: em($horz-spacing-unit, 13px);
+          margin-right: em($horz-spacing-unit);
           //min-width: 48%;
         }
       }
@@ -159,13 +144,20 @@
       }
     }
     @include breakpoint($desk) {
-      .pane-menu-menu-quick-links-menu,
-      .pane-system-main-menu {
+      .pane-menu-menu-quick-links-menu {
         float: left;
         width: 32%;
       }
       .pane-menu-menu-quick-links-menu{
-        padding-right: em($horz-spacing-unit, 13px);
+        padding-right: em($horz-spacing-unit);
+      }
+    }
+    @include breakpoint($wide) {
+      .pane-menu-menu-quick-links-menu {
+        width: 35%;
+      }
+      .pane-menu-menu-quick-links-menu{
+        padding-right: em($horz-spacing-unit);
       }
     }
   } // end l-region--footer-right
